force-app/main/default/objects/Resume__c/fields/Analysis_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Feedback__c</fullName>
    <description>JSON or text summary of AI-suggested fixes.</description>
    <label>Analysis Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>