force-app/main/default/objects/Resume__c/fields/ATS_Score__c.field-meta.xml
<CustomField>
    <fullName>ATS_Score__c</fullName>
    <description>The overall health score calculated by AI.</description>
    <label>ATS Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>