force-app/main/default/objects/Resume__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the resume to a specific person.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resumes</relationshipLabel>
    <relationshipName>Resumes</relationshipName>
    <type>Lookup</type>
</CustomField>