force-app/main/default/objects/Resume__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the user&apos;s main resume.</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>