force-app/main/default/objects/Resume__c/fields/Layout_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Layout_Config_JSON__c</fullName>
    <description>Stores UI state (fonts, colors, column widths).</description>
    <label>Layout Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>