force-app/main/default/objects/Resume__c/fields/Raw_Text__c.field-meta.xml
<CustomField>
    <fullName>Raw_Text__c</fullName>
    <label>Raw Extracted Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>