force-app/main/default/objects/Resume__c/fields/Raw_Text_Draft__c.field-meta.xml
<CustomField>
    <fullName>Raw_Text_Draft__c</fullName>
    <description>The unfiltered text parsed from the upload.</description>
    <label>Raw Extracted Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>