force-app/main/default/objects/Resume__c/fields/Resume_Name__c.field-meta.xml
<CustomField>
    <fullName>Resume_Name__c</fullName>
    <description>User-defined name</description>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>